--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -3,8 +3,9 @@ on:
   workflow_dispatch:
 
 jobs:
-  Explore-GitHub-Actions:
-    # You need to use the INSTALLATION_NAME from the previous step
+  container-job:
     runs-on: arc-runner-set
+    container: node:17.6.0
     steps:
-    - run: echo "🎉 This job uses runner scale set runners!"
+      - run: node --version
+      - run: npm --version
