--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,14 +4,14 @@ on:
 
 jobs:
   container-job-01:
-    runs-on: runner-test-04
+    runs-on: arc-runner-set
     container: node:17.6.0
     steps:
       - run: node --version
       - run: npm --version
       - run: sleep 120
   container-job-02:
-    runs-on: runner-test-04
+    runs-on: arc-runner-set
     container: node
     steps:
       - run: node --version
