--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,6 +10,7 @@ jobs:
       - run: node --version
       - run: npm --version
       - run: mkdir /toto
+      - run: whoami
   container-job-02:
     runs-on: arc-runner-set
     container: node
@@ -17,3 +18,4 @@ jobs:
       - run: node --version
       - run: npm --version
       - run: mkdir /titi
+      - run: whoami
