--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,18 +4,11 @@ on:
 
 jobs:
   container-job-01:
-    runs-on: arc-runner-set
+#    runs-on: arc-runner-set
+    runs-on: runner-vm-2.317
     container: node:17.6.0
     steps:
       - run: node --version
       - run: npm --version
       - run: mkdir /toto
-      - run: whoami
-  container-job-02:
-    runs-on: arc-runner-set
-    container: node
-    steps:
-      - run: node --version
-      - run: npm --version
-      - run: mkdir /titi
       - run: whoami
