--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,4 +7,6 @@ jobs:
     runs-on: arc-runner-set
     container: golang
     steps:
-    - run: git clone https://github.com/richardpct/go-hostname
+    - uses: actions/checkout@v4
+    - name: ls
+      run: ls -la
