--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,5 +10,4 @@ jobs:
     - uses: actions/checkout@v4
     - name: build
       run: |
-        go mod init example.com/m
-        go build -o go-hostname
+        go mod init example/hello
