--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,4 +12,4 @@ jobs:
       run: |
         go mod init example/hello
         go mod tidy
-        go build -o hello .
+        go build -buildvcs=false -o hello .
