--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,3 +21,8 @@ jobs:
         path: |
           hello
         key: toto
+    - uses: actions/cache/restore@v4
+      id: cache
+      with:
+        path: hello
+        key: toto
