--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,9 +21,15 @@ jobs:
         path: |
           hello
         key: toto
+  container-build:
+    runs-on: self-hosted
+    container: golang
+    steps:
     - uses: actions/cache/restore@v4
       id: cache
       with:
         path: hello
         key: toto
-      run: ./hello
+    - name: exec
+      run: |
+        ./hello
